Updated example for server-site REST bundle and added README.md